# gcl

./: .gitignore  CMakeLists.txt
include/gcl/: core.h  defs.h  gcl.h  string.h  terminal.h  wrappers.h
include/internal/: __linux.h  __string.h  __windows.h
src/: CMakeLists.txt  wrappers.c
src/core/linux/: core.c  gcl.c
src/core/windows/: CMakeLists.txt  core.c  gcl.c  utils.c
src/string/: allocation.c  replacement.c
test/: 0_basic_test.c  1_read_file.c  2_write_file.c  CMakeLists.txt
